k8s-resources/demo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-api
  name: demo-api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: sidecache
    port: 9191
    protocol: TCP
    targetPort: 9191
  selector:
    app: demo-api
  type: ClusterIP
