k8s-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidecache-injector
  namespace: platform
  labels:
    app: sidecache-injector
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: sidecache-injector
  type: ClusterIP
