k8s-resources/mutatingwebhookconf.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: sidecache-injector-webhook-config
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNwakNDQVk0Q0NRQ1RnVG1IYlFnTkx6QU5CZ2txaGtpRzl3MEJBUXNGQURBVk1STXdFUVlEVlFRRERBcG4KYnkxMGRYSnJhWGxsTUI0WERUSXhNVEl4T1RFd016VTFOMW9YRFRNeE1USXhOekV3TXpVMU4xb3dGVEVUTUJFRwpBMVVFQXd3S1oyOHRkSFZ5YTJsNVpUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCCkFNOXJFTGpKM2NWbkw1SmthTFJtcVo0TmJxVlNLK3FNbGo5WVFiVVJ3akRaQXVZK0hoZE1GR1hiQVl1T2VBWS8KYUhlZ2hicUlPcUF4TG43YjJMbUZ6bnVCLzgvOVFhUW1pQVFxanF6Ykk1d3AydVI0UVRvU1FoSnBZamJKeWF2QgpKU28zbHdyZmdjZG [...]
    service:
      name: sidecache-injector
      namespace: platform
      path: /mutate
      port: 443
  failurePolicy: Ignore
  matchPolicy: Exact
  name: sidecache-injector.platform.svc
  namespaceSelector:
    matchLabels:
      cache.goturkiye.com/sidecache-webhook: enabled
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - extensions
    - apps
    apiVersions:
    - v1beta1
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
